Major update: security audit + UI polish + backend optimization + SEO
Security (16 fixes):
- Path traversal protection on file upload/display
- File extension whitelist (jpg,png,gif,webp only)
- Sync endpoints restricted to ADMIN role
- Docker secrets externalized, non-root container user
- Security headers (HSTS, X-Frame-Options, X-Content-Type)
- Page size limits on all endpoints
- Password strength validation
- JWT expiry reduced to 2h, prod ddl-auto=validate

UI Polish:
- FeedDetailPage: full-width carousel, author card, floating action bar
- FeedWritePage: step progress, character counters
- MyPage: gradient profile header, activity stats, paw-pattern pet cards
- PetRegisterPage: species selector cards, live preview, age calculator
- Admin pages: stat cards, alternating table rows, confirmation modals

Backend Optimization:
- DataInitializer: auto-sync on first startup
- Search endpoint with Haversine geo-proximity
- WebConfig for serving uploaded images
- N+1 query fixes with batch fetching
- Proper @Transactional annotations
- Bean Validation on all DTOs
- EntityNotFoundException handler

SEO:
- Meta tags, OG tags, JSON-LD structured data
- robots.txt, sitemap.xml
- SEOHead component for per-page meta
- noscript fallback content

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>